k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eventium
  labels:
    app.kubernetes.io/part-of: eventium
